--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <div class="footer__content">
         <div class="footer__content--section">
           <div class="footer__logo">
-            <img class="es__logo" src="/img/logo.jpg">
+            <img class="es__logo" src="/img/logo-2.jpg">
           </div>
           <div class="social__media">
             <a title="Escrowme facebook page" target="_blank" href="https://m.facebook.com/Escrowme-2387271738222517/"><i class="fab fa-facebook-square"></i><span class="space"></span></a>
