--- a/public/escrowme-first-version-release-details.html
+++ b/public/escrowme-first-version-release-details.html
@@ -17,7 +17,7 @@
     <div class="header">
       <div></div>
       <div class="logo">
-        <img class="es__logo" src="/img/logo.jpg">
+        <img class="es__logo" src="/img/logo-2.jpg">
       </div>
      <div class="header__menu"></div>
      <div class="header__menu"><a href="/index.html">Home</a></div>
@@ -119,7 +119,7 @@
       <div class="footer__content">
         <div class="footer__content--section">
           <div class="footer__logo">
-            <img class="es__logo" src="/img/logo.jpg">
+            <img class="es__logo" src="/img/logo-2.jpg">
           </div>
           <div class="social__media">
             <a title="Escrowme facebook page" target="_blank" href="https://m.facebook.com/Escrowme-2387271738222517/"><i class="fab fa-facebook-square"></i><span class="space"></span></a>
