--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="header">
       <div></div>
       <div class="logo">
-        <img class="es__logo" src="/img/logo-2.jpg">
+        <img class="es__logo" src="/img/logo-2.png">
       </div>
       <div class="hm"></div>
      <div class="header__menu"><a href="/index.html">Home</a></div>
@@ -54,7 +54,7 @@
       <div class="footer__content">
         <div class="footer__content--section">
           <div class="footer__logo">
-            <img class="es__logo" src="/img/logo-2.jpg">
+            <img class="es__logo" src="/img/logo-2.png">
           </div>
           <div class="social__media">
             <a title="Escrowme facebook page" target="_blank" href="https://m.facebook.com/Escrowme-2387271738222517/"><i class="fab fa-facebook-square"></i><span class="space"></span></a>
@@ -75,7 +75,7 @@
         </div>
         <div class="footer__content--section">
           <p>Community</p>
-          <a href="#">Github</a>
+          <a href="https://github.com/Escrowme2020">Github</a>
           <a href="#">Discord</a>
           <a href="#">Stack Overflow</a>
         </div>
